Bug 475354 - Plasma crashes when typing in kickoff
Summary: Plasma crashes when typing in kickoff
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: general (other bugs)
Version First Reported In: 5.27.8
Platform: Neon Linux
: NOR crash
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: drkonqi
Depends on:
Blocks:
 
Reported: 2023-10-08 08:10 UTC by Oded Arbel
Modified: 2023-10-29 13:42 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
New crash information added by DrKonqi (354.51 KB, text/plain)
2023-10-08 08:10 UTC, Oded Arbel
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Oded Arbel 2023-10-08 08:10:23 UTC
Application: plasmashell (5.27.8)

Qt Version: 5.15.10
Frameworks Version: 5.111.0
Operating System: Linux 6.5.4-060504-generic x86_64
Windowing System: Wayland
Distribution: KDE neon Testing Edition
DrKonqi: 5.27.8 [CoredumpBackend]

-- Information about the crash:
I'm not sure of the exact reproduction, but it happened to me 3 times this morning, all when trying to launch the same thing.

The crash can be reproduced sometimes.

-- Backtrace (Reduced):
#7  QList<AppStream::Component>::mid(int, int) const (this=this@entry=0x7f4fceffda90, pos=<optimized out>, pos@entry=0, alength=<optimized out>, alength@entry=3) at /usr/include/x86_64-linux-gnu/qt5/QtCore/qlist.h:773
#8  0x00007f50f698d147 in InstallerRunner::match(Plasma::RunnerContext&) (this=0x5559dea36a20, context=...) at ./runners/appstream/appstreamrunner.cpp:93
[...]
#10 0x00007f50d43229bd in ThreadWeaver::Executor::run(QSharedPointer<ThreadWeaver::JobInterface> const&, ThreadWeaver::Thread*) () at /lib/x86_64-linux-gnu/libKF5ThreadWeaver.so.5
#11 0x00007f50d43238a4 in ThreadWeaver::Job::execute(QSharedPointer<ThreadWeaver::JobInterface> const&, ThreadWeaver::Thread*) () at /lib/x86_64-linux-gnu/libKF5ThreadWeaver.so.5
#12 0x00007f50d4328776 in ThreadWeaver::Thread::run() () at /lib/x86_64-linux-gnu/libKF5ThreadWeaver.so.5


Reported using DrKonqi
Comment 1 Oded Arbel 2023-10-08 08:10:24 UTC
Created attachment 162156 [details]
New crash information added by DrKonqi

DrKonqi auto-attaching complete backtrace.
Comment 2 Oded Arbel 2023-10-09 13:47:55 UTC
I cannot reproduce after updating from Neon testing today.
Comment 3 Fushan Wen 2023-10-29 13:42:22 UTC
Git commit e3bc402bc8d4b5e1ee07597b5f23db913a0e2032 by Fushan Wen.
Committed on 29/10/2023 at 14:35.
Pushed by fusionfuture into branch 'master'.

runners/appstream: reduce list copy by using iterator

M  +8    -8    runners/appstream/appstreamrunner.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/e3bc402bc8d4b5e1ee07597b5f23db913a0e2032