runners/appstream: reduce list copy by using iterator

BUG: 475354